tdf#114732 backspace can only make bullet invisible.

It toggled the bullet on unexptectedly before connecting
two paragraphs, which made undo recover the incorrect result.

Change-Id: I83104d72fef95d8bd95e8e0e3bca4a063b69a450